// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload API should return 400 for missing required fields 1`] = `
Object {
  "error": "Missing upload key, file, runtime version or commit hash",
}
`;

exports[`Upload API should return 405 for non-POST requests 1`] = `
Object {
  "error": "Method not allowed",
}
`;
